# ascend-opencv

./: README.en.md  README.md  README_CN.md  run.sh
acl/: CMakeLists.txt
acl/include/opencv2/acl/: acl.hpp  acl_init.hpp  acl_mat.hpp  acl_operation.hpp  acl_type.hpp  gemm.hpp  init_core.hpp  mat_core.hpp  mathfuncs.hpp  matrices.hpp  matrix_operations.hpp  operator_desc.hpp
acl/src/: acl.cpp  acl_init.cpp  acl_mat.cpp  gemm.cpp  mathfuncs.cpp  matrices.cpp  matrix_operations.cpp  operator_desc.cpp  precomp.hpp
acl/test/: acl.cpp  test_acl.cpp  test_common.cpp  test_common.hpp  test_correctness.cpp  test_correctness.hpp  test_gemm.cpp  test_main.cpp  test_mathfuncs.cpp  test_matrices.cpp  test_perf.hpp  test_precomp.hpp
samples/: CMakeLists.txt  README_CN.md  example.cpp
